# python-figure_eight

./: .gitignore  displaythreebodies.py  periodic-three-body-orbits.py  setup-pyenv-poetry-windows.ps1  three_body_simulation.csv
figure_eight/: pyproject.toml
figure_eight/figure_eight/: figure_eight.py  pattern.py
figure_eight/figure_eight_animated/: figure_eight_animated.py  pyproject.toml
find_dup_strs/: pyproject.toml
find_dup_strs/find_dup_strs/: find_dup_strs.py
find_dup_strs/tests/: test_find_dup_strs.py
quadratic_solver/: pyproject.toml
quadratic_solver/quadratic_solver/: quadratic_solver.py
quadratic_solver/tests/: test_quadratic_solver.py
three_body_simulation/: pyproject.toml
three_body_simulation/three_body_simulation/: simulation.py
