[project]
name = "figure-eight-animated"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert K Rouse",email = "robert_k_rouse99@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
